// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Gitt at det skal ikke vises en valideringsfeil > Når ErrorWrapper rendres > Så vises ikke valideringsfeil 1`] = `
<div>
  <div
    class=""
  />
</div>
`;

exports[`Gitt at det skal vises en valideringsfeil > Når ErrorWrapper rendres > Så vises Valideringsfeilen 1`] = `
<div>
  <div
    class="error-wrapper--with-error"
  >
    <p
      class="error-wrapper__errors"
    >
      Dette er en feil
    </p>
  </div>
</div>
`;
